fix: new isVisible prop to Overlay and fix modal/drawer interactions

--- a/packages/react-components/src/components/overlay/overlay.module.css
+++ b/packages/react-components/src/components/overlay/overlay.module.css
@@ -1,10 +1,8 @@
 @layer components {
   .Overlay {
-    &[data-overlay-visible='true'] {
-      display: block;
-      position: fixed;
-      inset: 0;
-    }
+    display: block;
+    position: fixed;
+    inset: 0;
 
     &[data-overlay-obfuscate='false'] {
       pointer-events: none;
